attempts to fix the play again button background on safari

--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,9 @@
   box-sizing: border-box;
 }
 
-* {
-  /* border: 1px solid red; */
-}
+/* * {
+  border: 1px solid red;
+} */
 
 html,
 body {
@@ -52,6 +52,13 @@ header {
   border-radius: 8px;
   width: 100%;
   max-width: 500px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .score-container {
@@ -158,6 +165,28 @@ header {
   grid-row: 1/2;
 }
 
+.attribution {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 11px;
+  text-align: center;
+  margin: 1rem auto 0;
+  color: #fff;
+  width: 100vw;
+}
+.attribution a {
+  color: hsl(189, 59%, 53%);
+}
+
+.attr-entry {
+  margin: 0 1rem;
+}
+
+.attr-entry p {
+  margin-bottom: 0;
+}
+
 #rules-container {
   display: none;
   flex-direction: column;
@@ -189,12 +218,6 @@ header {
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "user computer" "winner winner";
 }
-
-/* #selection-display-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
 
 #house,
 #user {
@@ -251,11 +274,12 @@ header {
   border-radius: 8px;
   margin: 1rem auto;
   border-style: none;
+  background-color: #fff;
 }
 
 .winner {
-  box-shadow: 0 0 0px 30px rgba(100, 100, 100, 0.1),
-    0 0 0px 60px rgba(100, 100, 100, 0.1), 0 0 0px 90px rgba(100, 100, 100, 0.1);
+  box-shadow: 0 0 0px 10px rgba(100, 100, 100, 0.2),
+    0 0 0px 20px rgba(100, 100, 100, 0.1), 0 0 0px 35px rgba(100, 100, 100, 0.1);
 }
 
 .rock:focus,
@@ -294,5 +318,11 @@ header {
   #user-selection {
     height: 14rem;
     width: 14rem;
+  }
+
+  .winner {
+    box-shadow: 0 0 0px 30px rgba(100, 100, 100, 0.2),
+      0 0 0px 60px rgba(100, 100, 100, 0.2),
+      0 0 0px 90px rgba(100, 100, 100, 0.1);
   }
 }
